2011-02-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/scripts/sdcc.nsi:
	  Merge from trunk.
	* src/z80/ralloc2.cc:
	  Fix for --optralloc-all.
	* src/z80/gen.c:
	  Fix for --reserve-regs-iy.

2011-02-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Improved heuristics wrt. junction nodes.
	* src/version.awk,
	  src/src.dsp,
	  support/scripts/resource.rc:
	  Merge from trunk. 
	* src/z80/gen.c:
	  Improved addition by increment.

2011-02-10 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Early elimination of some impossible assignments.
	  
2011-02-07 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Avoid result overwriting operand bug in |.

2011-02-07 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCtree_dec.hpp,
	  src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Changed style from Allman to GNU.

2011-02-07 Borut Razem <borut.razem AT gmail.com>

	* Merged from trunk

2011-02-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* all.vcxproj: fixed missing ;'s
	* all.vcxproj.filters: added sdld6808, sdldgb, sdldz80

2011-02-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.c (setOperandType),
	  support/regression/tests/bug-221168.c,
	  support/regression/tests/bug3166208.c:
	  Maarten's fix of #3166208 from trunk.

2011-02-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/mcs51/gen.h,
	  src/mcs51/gen.c,
	  sdas/linksrc/Makefile.in,
	  support/makebin/makebin.c,
	  support/regression/tests/bug3130806.c:
	  Fixes from trunk.

2011-02-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* sim/ucsim/z80.src/inst_cb.cc:
	  Fixed #3166058.

2011-01-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc:
	  Improved handling of HL.
