@@ -1,3 +1,9 @@
+2011-01-18 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/peeph-z80.def,
+	  support/regression/tests/bug-3184920.c:
+	  Fix for #3184920 from trunk.
+
 2011-02-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* support/scripts/sdcc.nsi:
